--- a/.github/workflows/task-a-cd.yml
+++ b/.github/workflows/task-a-cd.yml
@@ -16,3 +16,6 @@ jobs:
           run: |
             pip install -r ./task_a/requirements.txt
         # TODO: run pytest
+        - name: Run tests
+          run: |
+            pytest ./task_a/task_a.py
