--- a/.github/workflows/task-a-cd.yml
+++ b/.github/workflows/task-a-cd.yml
@@ -8,7 +8,7 @@ jobs:
     name: pytest
     steps:
         - uses: actions/checkout@v4
-        - uses: actions/cache
+        - uses: actions/cache@v4
         - name: Set up Python
           uses: actions/setup-python@v5
           with:
