--- a/.github/workflows/task-a-cd.yml
+++ b/.github/workflows/task-a-cd.yml
@@ -18,4 +18,8 @@ jobs:
             pip install -r ./task_a/requirements.txt
         - name: Run tests
           run: |
-            pytest ./task_a/task_a.py
+            pytest --html=report.html ./task_a/task_a.py 
+        - uses: actions/upload-artifact@v4
+          with:
+            name: report
+            path: ./task_a/report.html
