--- a/.github/workflows/task-a-cd.yml
+++ b/.github/workflows/task-a-cd.yml
@@ -20,6 +20,7 @@ jobs:
           run: |
             pytest --html=report.html ./task_a/task_a.py 
         - uses: actions/upload-artifact@v4
+          if: always()
           with:
             name: report
             path: ./task_a/report.html
