--- a/.github/workflows/task-a-cd.yml
+++ b/.github/workflows/task-a-cd.yml
@@ -2,16 +2,27 @@ name: task-a cd
 
 on: [push]
 
+runs-on: ${{ matrix.os }}
+strategy:
+  matrix:
+    os: [ubuntu-latest, macos-latest, windows-latest]
+    python-version: ["3.10", "3.11", "pypy3.10"]
+    exclude:
+      - os: macos-latest
+        python-version: "3.10"
+      - os: windows-latest
+        python-version: "3.10"
+
 jobs:
   test:
-    runs-on: "ubuntu-latest"
+    runs-on: ${{ matrix.os }}
     name: pytest
     steps:
         - uses: actions/checkout@v4
         - name: Set up Python
           uses: actions/setup-python@v5
           with:
-            python-version: '3.11'
+            python-version: ${{ matrix.python-version }}
             cache: 'pip'
         - name: Install dependencies
           run: |
@@ -22,5 +33,5 @@ jobs:
         - uses: actions/upload-artifact@v4
           if: always()
           with:
-            name: report
+            name: Report-${{ matrix.os }}-${{ matrix.python-version }}
             path: report.html
